syntax = "proto3";

package strategy;

import "protos/models/util/local_timestamp.proto";
import "protos/models/util/uuid.proto";

option java_multiple_files = true;
option java_package = "common.model.protos";
option java_outer_classname = "StrategyProtos";

message StrategyProto {
  string object_class = 1;
  string version = 2;

  //Primary Key
  util.UUIDProto uuid = 5;
  util.LocalTimestampProto as_of = 6;
  bool is_link = 7;

  //Transaction details
  string strategy_name = 10;
  StrategyProto parent = 11;
}
